Fix bug not working on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,12 +44,19 @@ header {
   position: relative;
   transform-style: preserve-3d;
   transform: scale(1);
+  -webkit-transform-style: preserve-3d;
+  -webkit-transform: scale(1);
+
+
   /*insert card element into 3d space*/
 }
 
 .card:active {
+
   transform: scale(.95);
   transition: transform .3s;
+  -webkit-transform: scale(.95);
+  -webkit-transition: transform .3s;
 }
 
 .front-card,
@@ -63,17 +70,19 @@ header {
   /* postion relative to card*/
   border-radius: 5px;
   background: white;
-backface-visibility: hidden;
-
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .card.select {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
   /* when select class is present rotate 180oc)*/
 }
 
 .front-card {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 /* Modal Styling
